# Layer_Select_Fuse_for_MLLM

./: .gitignore  .nfs800feef40025e4770000000c  README.md  README_rocm.md  debug.txt  download_datasets copy.sh  download_datasets.sh  pyproject.toml  pyproject_stable_amd.toml
checkpoint/: filter.py
llava/: mm_utils.py
llava/model/: __init__.py  apply_delta.py  builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  modeling_llama.py  util.py
llava/model/multimodal_encoder/: _init_.py  base_encoder.py  builder.py  clip_encoder.py  siglip_encoder.py
llava/model/multimodal_projector/: builder.py  ms_cross_attn.py
llava/model/multimodal_projector/deformable_attention/ops/modules/: ms_deform_attn.py
llava/train/: llava_trainer.py  train.py
scripts/: zero2.json
scripts/MLVF/: train.sh
scripts/MLVF/eval_toolkits/: eval.sh
